--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Ruth's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="web.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="js/portfolio.js" defer></script>
+	<script src="portfolio.js" defer></script>
 </head>
 <body id ="intro">
 	
