--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </header>
 <nav>
 	<ul  id= "navb">
-		<li><a href="portfolio.html"> home </a></li>
+		<li><a href="index.html"> home </a></li>
 		<li><a href="about.html"> about  </a></li>
 		<li><a href="resume.html"> resume </a></li>
 		<li><a href="work.html"> work </a></li>
