--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<title>Ruth's Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="css/portfolio.css">
+	<link rel="stylesheet" type="text/css" href="web.css">
 </head>
 <body>
 	
